# plugout

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
Casks/: plugout.rb
docs/design/: 2026-07-10-app-format-and-support-files.md  2026-07-10-auto-update.md
docs/superpowers/plans/: 2026-07-11-semantic-search-grouping.md  2026-07-12-enrichment-export.md
docs/superpowers/specs/: 2026-07-11-semantic-search-grouping-design.md  2026-07-12-daw-usage-design.md  (+1 more)
e2e/: app.spec.ts  keyboard.spec.ts  settings.spec.ts
src/: App.test.tsx  App.tsx  api.mock.ts  api.test.ts  api.ts  detailsCache.ts  export.test.ts  export.ts  main.tsx  settings.test.ts  settings.ts  styles.css  theme.ts  types.ts  updater.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useSelection.ts  useSemanticRelated.ts  util.test.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  keywords.rs  lib.rs  main.rs  model.rs  receipt_cache.rs  receipts.rs  remover.rs  reversal.rs  scanner.rs  search.rs  usage.rs  vst3meta.rs
src/components/: ActionBar.test.tsx  ActionBar.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  ExportModal.test.tsx  ExportModal.tsx  FormatBadge.test.tsx  FormatBadge.tsx  Inspector.test.tsx  Inspector.tsx  PluginList.test.tsx  PluginList.tsx  SettingsModal.test.tsx  SettingsModal.tsx  Sidebar.tsx  SizeChart.test.tsx  SizeChart.tsx  UpdatePill.test.tsx  UpdatePill.tsx
