[package]
name = "plugout"
version = "0.2.5"
description = "Find and remove audio plugins (AU, VST3, VST2, CLAP, AAX) on macOS"
authors = ["Nikita Griaznov"]
license = "Apache-2.0"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "plugout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
trash = "5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tern-engine = { path = "vendor/tern-engine", features = ["emb_int8"] }
flate2 = "1"

[dev-dependencies]
tempfile = "3"

